--- a/src/html/layout/_main.html
+++ b/src/html/layout/_main.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>1PAC Weather App</title>
+  <link rel="shortcut icon" href="https://1pac.vn/favicons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/css/application.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
