--- a/src/html/layout/_main.html
+++ b/src/html/layout/_main.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url('https://images.pexels.com/photos/5412/water-blue-ocean.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');">
   {% block content %}
   {% endblock %}
   <script src="/js/main.js"></script>
