--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -15,8 +15,7 @@
 
 /* IMPORT COMPONENTS
 ----------------------------- */
-@import "components/headline";
-@import "components/button";
-@import "components/todo";
+@import "components/loader";
+@import "components/weather";
 
 @import "components/util";
