--- a/src/scss/shared/variable/_color.scss
+++ b/src/scss/shared/variable/_color.scss
@@ -18,7 +18,7 @@ $color-snow: #fafafa;
 $color-whisper: #eeeeee;
 $color-gainsboro: #eeeeee;
 $body-font-color: #868686;
-$color-primary: #0075FF; // primary color
+$color-primary: #ed2524 !default;
 $color-white:  #fff;
 
 $body-font-color: #868686;
