--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,6 +13,11 @@ body {
   color: $body-font-color;
   background-color: $color-white;
   overflow-x: hidden;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
 
 a {
