--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -1,8 +1,8 @@
-.section {
-  &--xl {
-    > [class^="container"] {
-      padding-top: 80px;
-      padding-bottom: 80px;
-    }
+.section-balance {
+  position: relative;
+
+  > [class^="container"] {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
