--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -1,10 +1,10 @@
 .loader {
   position: absolute;
-  border: 16px solid $color-snow;
-  border-top: 16px solid $color-primary; 
+  border: 12px solid $color-black;
+  border-top: 12px solid $color-primary; 
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   animation: spin .8s linear infinite;
 }
 
