--- a/src/scss/components/_weather.scss
+++ b/src/scss/components/_weather.scss
@@ -36,14 +36,13 @@
         bottom: 0;
         background-color: #fff;
         opacity: .4;
-        -webkit-backdrop-filter: saturate(30%) blur(60px);
-        backdrop-filter: saturate(30%) blur(60px);
+        -webkit-backdrop-filter: saturate(360%) blur(160px);
+        backdrop-filter: saturate(360%) blur(160px);
       }
   }
 
   .weather-main {
     @include flexCenter(column, center, center);
-    opacity: 0;
 
     &__city {
       color: $color-primary;
@@ -66,6 +65,7 @@
     .temp {
       @include flexCenter(row, center);
       width: 100%;
+      color: black;
 
       &__item {
         font-size: 50px;
@@ -74,10 +74,6 @@
           content: "\2103";
         }
       }
-    }
-
-    &.is-active {
-      opacity: 1;
     }
   }
 }
