--- a/src/scss/components/_weather.scss
+++ b/src/scss/components/_weather.scss
@@ -62,6 +62,11 @@
       font-weight: bold;
     }
 
+    &__redo { 
+      cursor: pointer;
+      color: $color-black;
+    }
+
     .temp {
       @include flexCenter(row, center);
       width: 100%;
